Bug 283117 - Systemsettings crash when trying to stop kpackagekit service
Summary: Systemsettings crash when trying to stop kpackagekit service
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kded (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
: 291065 300546 303181 303766 303777 304765 306888 308822 309160 314360 317303 323457 324269 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-01 06:47 UTC by Hrvoje Senjan
Modified: 2013-09-22 12:55 UTC (History)
20 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.16 KB, text/plain)
2012-03-18 12:58 UTC, Myriam Schweingruber
Details
New crash information added by DrKonqi (3.94 KB, text/plain)
2012-04-18 13:17 UTC, Aioanei Rares
Details
New crash information added by DrKonqi (4.36 KB, text/plain)
2012-06-14 21:54 UTC, Xavier Hourcade
Details
New crash information added by DrKonqi (5.20 KB, text/plain)
2012-08-18 22:09 UTC, Robert Stahl
Details
New crash information added by DrKonqi (3.92 KB, text/plain)
2012-08-24 15:57 UTC, Hrvoje Senjan
Details
New crash information added by DrKonqi (4.09 KB, text/plain)
2012-08-27 21:31 UTC, Julien MÊME
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2011-10-01 06:47:38 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.8.0
Operating System: Linux 3.1.0-0.rc8.git0.0.fc16.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- What I was doing when the application crashed:

Using 4.7.1 + qt 4.8 beta1 fedora 16 packages.
On the next try - no crashes

-- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#6  0x00007f1a84c8634d in KDEDConfig::slotStopService (this=0x10e4390) at /usr/src/debug/kde-runtime-4.7.1/kcontrol/kded/kcmkded.cpp:456
#7  0x00000031edd8b721 in QMetaObject::activate (sender=0x113b2f0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffca5d7ad0) at kernel/qobject.cpp:3546
#8  0x00000031f2447572 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#9  0x00000031f218b56e in QAbstractButtonPrivate::emitClicked (this=0x113b350) at widgets/qabstractbutton.cpp:546
#10 0x00000031f218c8ab in QAbstractButtonPrivate::click (this=0x113b350) at widgets/qabstractbutton.cpp:539
#11 0x00000031f218cb1c in QAbstractButton::mouseReleaseEvent (this=0x113b2f0, e=0x7fffca5d83a0) at widgets/qabstractbutton.cpp:1121
#12 0x00000031f1e1835a in QWidget::event (this=0x113b2f0, event=0x7fffca5d83a0) at kernel/qwidget.cpp:8342
#13 0x00000031f1dc7d64 in notify_helper (e=0x7fffca5d83a0, receiver=0x113b2f0, this=0xaffa30) at kernel/qapplication.cpp:4495
#14 QApplicationPrivate::notify_helper (this=0xaffa30, receiver=0x113b2f0, e=0x7fffca5d83a0) at kernel/qapplication.cpp:4467
#15 0x00000031f1dcd4b3 in QApplication::notify (this=<optimized out>, receiver=0x113b2f0, e=0x7fffca5d83a0) at kernel/qapplication.cpp:4038
#16 0x00000031f30504f6 in KApplication::notify (this=0x7fffca5d90a0, receiver=0x113b2f0, event=0x7fffca5d83a0) at /usr/src/debug/kdelibs-4.7.1/kdeui/kernel/kapplication.cpp:311
#17 0x00000031edd77a9c in QCoreApplication::notifyInternal (this=0x7fffca5d90a0, receiver=0x113b2f0, event=0x7fffca5d83a0) at kernel/qcoreapplication.cpp:853
#18 0x00000031f1dc8d32 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:231
#19 QApplicationPrivate::sendMouseEvent (receiver=0x113b2f0, event=0x7fffca5d83a0, alienWidget=0x113b2f0, nativeWidget=0xc614e0, buttonDown=0x113b2f0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3153
#20 0x00000031f1e44285 in QETWidget::translateMouseEvent (this=0xc614e0, event=<optimized out>) at kernel/qapplication_x11.cpp:4473
#21 0x00000031f1e4314a in QApplication::x11ProcessEvent (this=0x7fffca5d90a0, event=0x7fffca5d8c60) at kernel/qapplication_x11.cpp:3599
#22 0x00000031f1e6aa3c in x11EventSourceDispatch (s=0xb02660, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#23 0x00000031e6044a4d in g_main_dispatch (context=0xb02000) at gmain.c:2441
#24 g_main_context_dispatch (context=0xb02000) at gmain.c:3011
#25 0x00000031e6045248 in g_main_context_iterate (context=0xb02000, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3089
#26 0x00000031e604541c in g_main_context_iteration (context=0xb02000, may_block=1) at gmain.c:3152
#27 0x00000031edda677f in QEventDispatcherGlib::processEvents (this=0xad3990, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#28 0x00000031f1e6a72e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#29 0x00000031edd76bd2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x00000031edd76e27 in QEventLoop::exec (this=0x7fffca5d9030, flags=...) at kernel/qeventloop.cpp:204
#31 0x00000031edd7b825 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1125
#32 0x000000000040a855 in main (argc=5, argv=0x7fffca5d9368) at /usr/src/debug/kdebase-workspace-4.7.1/kdebase-workspace-4.7.1/systemsettings/app/main.cpp:49

Reported using DrKonqi
Comment 1 Myriam Schweingruber 2012-03-18 12:58:15 UTC
Created attachment 69711 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.0

- What I was doing when the application crashed:

Tried to stop the apper service in Kubuntu 12.04 beta 1, KDE 4.8.1

-- Backtrace (Reduced):
#6  0x00007f60a60d042d in KDEDConfig::slotStopService (this=0x4032c70) at ../../../kcontrol/kded/kcmkded.cpp:460
[...]
#8  0x00007f60c2c040c2 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#9  0x00007f60c29422ee in QAbstractButtonPrivate::emitClicked (this=0x4043e90) at widgets/qabstractbutton.cpp:546
#10 0x00007f60c294362b in QAbstractButtonPrivate::click (this=0x4043e90) at widgets/qabstractbutton.cpp:539
#11 0x00007f60c294389c in QAbstractButton::mouseReleaseEvent (this=0x3fa6f80, e=0x7ffff7e7ae10) at widgets/qabstractbutton.cpp:1121
Comment 2 Myriam Schweingruber 2012-03-18 12:59:49 UTC
Setting status to confirmed.

BTW, the current version is not listed, should I add it in bugzilla?
Comment 3 Aioanei Rares 2012-04-18 13:17:26 UTC
Created attachment 70481 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.0

- What I was doing when the application crashed:

Trying to disable/stop Apper on OpenSUSE 12.2 M3 i586. Next time I tried to disable/stop a service systemsettings did not crash no more. FWIW, this is a VM (KVM) and the host is  x86_64 (Debian testing/unstable with vanilla 3.4-rc kernel),

-- Backtrace (Reduced):
#7  0xb2a2dd4b in KDEDConfig::slotStopService (this=0x9109fe8) at /usr/src/debug/kde-runtime-4.8.1/kcontrol/kded/kcmkded.cpp:460
[...]
#9  0xb6b886bd in QAbstractButton::clicked (this=0x9574dd8, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#10 0xb687abcd in QAbstractButtonPrivate::emitClicked (this=0x9574ea8) at widgets/qabstractbutton.cpp:546
#11 0xb687c22b in QAbstractButtonPrivate::click (this=0x9574ea8) at widgets/qabstractbutton.cpp:539
#12 0xb687c4e6 in QAbstractButton::mouseReleaseEvent (this=0x9574dd8, e=0xbfa524b4) at widgets/qabstractbutton.cpp:1121
Comment 4 Christoph Feck 2012-05-17 11:31:31 UTC
*** Bug 291065 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2012-05-24 09:16:41 UTC
*** Bug 300546 has been marked as a duplicate of this bug. ***
Comment 6 Xavier Hourcade 2012-06-14 21:54:12 UTC
Created attachment 71845 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.3 (4.8.3) using Qt 4.8.2

- What I was doing when the application crashed:

Open System Setting, go straight to Services, uncheck Apper, hit Apply -> crash.

I attach this trace since my versions are stable and up to date (KDE 4.8.3 / fc16).

Also, I had no issue while I did check/uncheck this Apper service a couple of times earlier today (but this was the first time, thou, and the only change since then, is that I just have entirely unprelinked, cf. bug 832193 ).

-- Backtrace (Reduced):
#6  0x00007f315df5436d in KDEDConfig::slotStopService (this=0x2886d70) at /usr/src/debug/kde-runtime-4.8.3/kcontrol/kded/kcmkded.cpp:460
[...]
#8  0x00007f317a1ba882 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:219
#9  0x00007f3179efcd0e in QAbstractButtonPrivate::emitClicked (this=0x289d100) at widgets/qabstractbutton.cpp:548
#10 0x00007f3179efe04b in QAbstractButtonPrivate::click (this=0x289d100) at widgets/qabstractbutton.cpp:541
#11 0x00007f3179efe2bc in QAbstractButton::mouseReleaseEvent (this=0x289d0d0, e=0x7fffceef6280) at widgets/qabstractbutton.cpp:1123
Comment 7 Xavier Hourcade 2012-06-14 21:57:36 UTC
After submitting this report from the bug wizard, I let it restart System Settings for me and attempted again to uncheck the service, with success this time.

As per the other bug I mention, it is not on this tracker, but on rhbz, sorry
  https://bugzilla.redhat.com/show_bug.cgi?id=832193
Comment 8 Jekyll Wu 2012-07-08 10:17:55 UTC
*** Bug 303181 has been marked as a duplicate of this bug. ***
Comment 9 Jekyll Wu 2012-07-18 21:19:36 UTC
*** Bug 303766 has been marked as a duplicate of this bug. ***
Comment 10 Jekyll Wu 2012-07-19 08:34:35 UTC
*** Bug 303777 has been marked as a duplicate of this bug. ***
Comment 11 Jekyll Wu 2012-08-08 02:34:28 UTC
*** Bug 304765 has been marked as a duplicate of this bug. ***
Comment 12 Robert Stahl 2012-08-18 22:09:35 UTC
Created attachment 73284 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.4 (4.8.4) using Qt 4.8.1

- What I was doing when the application crashed:

In System Settings -> Service Manager -> Startup Services, I was attempting to stop BlueDevil, I unchecked the box next to the service name then hit the Stop button which caused the crash

-- Backtrace (Reduced):
#7  0xb0d5a5fb in KDEDConfig::slotStopService (this=0x9a208a8) at ../../../kcontrol/kded/kcmkded.cpp:460
[...]
#9  0xb707897d in QAbstractButton::clicked (this=0x9a8c960, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#10 0xb6d6c62d in QAbstractButtonPrivate::emitClicked (this=0x9a8c978) at widgets/qabstractbutton.cpp:548
#11 0xb6d6dc9b in QAbstractButtonPrivate::click (this=0x9a8c978) at widgets/qabstractbutton.cpp:541
#12 0xb6d6df56 in QAbstractButton::mouseReleaseEvent (this=0x9a8c960, e=0xbfd3bef4) at widgets/qabstractbutton.cpp:1123
Comment 13 Hrvoje Senjan 2012-08-24 15:57:58 UTC
Created attachment 73439 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.9.90 using Qt 4.8.2

- What I was doing when the application crashed:
Tried enabling Nepomuk module in kded --> crashed.
Probably useless at this point, but here's the backtrace anyway.

-- Backtrace (Reduced):
#6  0x00007f25c9f19307 in KDEDConfig::slotStartService (this=0x1f57b40) at /usr/src/debug/kde-runtime-git/kcontrol/kded/kcmkded.cpp:441
[...]
#8  0x00007f25e05f5e52 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#9  0x00007f25e0349f1e in QAbstractButtonPrivate::emitClicked (this=this@entry=0x1f73a80) at widgets/qabstractbutton.cpp:548
#10 0x00007f25e034a750 in QAbstractButtonPrivate::click (this=this@entry=0x1f73a80) at widgets/qabstractbutton.cpp:541
#11 0x00007f25e034a9bc in QAbstractButton::mouseReleaseEvent (this=0x1f67400, e=0x7fff3bf97390) at widgets/qabstractbutton.cpp:1123
Comment 14 Hrvoje Senjan 2012-08-24 15:58:57 UTC
Haha, i forgot i was the original reporter :-)
Comment 15 Julien MÊME 2012-08-27 21:31:08 UTC
Created attachment 73514 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.8.4 (4.8.4) "release 7" using Qt 4.8.2

- What I was doing when the application crashed:

I launch SystemSettings and Unckeck BluDevil to stop the service. After, the item is not selected. So when you click on the Stop Button (in state: enabled), no item selected so the software crash! I think, it searches an active item. So the Buttons "Start" and "Stop" must not be active...

-- Backtrace (Reduced):
#6  0x00007f55af5f43fd in KDEDConfig::slotStartService (this=0xd337c0) at /usr/src/debug/kde-runtime-4.8.4/kcontrol/kded/kcmkded.cpp:441
[...]
#8  0x00007f55c257ada2 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#9  0x00007f55c22b982e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:548
#10 0x00007f55c22bab6b in QAbstractButtonPrivate::click (this=0xd460b0) at widgets/qabstractbutton.cpp:541
#11 0x00007f55c22baddc in QAbstractButton::mouseReleaseEvent (this=0xd46080, e=0x7fff4103db60) at widgets/qabstractbutton.cpp:1123
Comment 16 Christoph Feck 2012-09-17 00:12:28 UTC
*** Bug 306888 has been marked as a duplicate of this bug. ***
Comment 17 Jekyll Wu 2012-10-22 18:49:21 UTC
*** Bug 308822 has been marked as a duplicate of this bug. ***
Comment 18 Christoph Feck 2012-10-28 18:10:01 UTC
*** Bug 309160 has been marked as a duplicate of this bug. ***
Comment 19 Christoph Feck 2013-01-27 14:22:10 UTC
Git commit 85c095ab6e2180b57a69f371763ac04701bd203c by Christoph Feck.
Committed on 27/01/2013 at 15:18.
Pushed by cfeck into branch 'KDE/4.10'.

Fix crash in kded services KCM

Common Qt4 porting regression:
currentItem() != selectedItem()
FIXED-IN: 4.10

M  +15   -17   kcontrol/kded/kcmkded.cpp
M  +2    -2    kcontrol/kded/kcmkded.h

http://commits.kde.org/kde-runtime/85c095ab6e2180b57a69f371763ac04701bd203c
Comment 20 Christoph Feck 2013-02-05 00:02:43 UTC
*** Bug 314360 has been marked as a duplicate of this bug. ***
Comment 21 Jekyll Wu 2013-03-25 01:28:03 UTC
*** Bug 317303 has been marked as a duplicate of this bug. ***
Comment 22 Jekyll Wu 2013-08-13 14:58:14 UTC
*** Bug 323457 has been marked as a duplicate of this bug. ***
Comment 23 Christoph Feck 2013-08-30 12:25:15 UTC
*** Bug 324269 has been marked as a duplicate of this bug. ***
Comment 24 Ben Cooksley 2013-09-01 07:25:22 UTC
briancreynolds@yahoo.com has been unsubscribed per an abuse report.