Fix crash in kded services KCM

Common Qt4 porting regression:
currentItem() != selectedItem()

BUG: 283117
FIXED-IN: 4.10